--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,19 +27,19 @@ jobs:
     - run: yarn install 
     - run: yarn run build 
     - run: ls 
-#     - run: ls dist/
-#     - run: pwd dist
+    - run: ls dist/
+    - run: pwd dist
     
 #     - name: 'Testing '
 #       run : echo 'testing'.
 #      - run : npm run test
 
-#     - name: 'Task 1: Connect to AWS '
-#       uses: aws-actions/configure-aws-credentials@v1
-#       with:
-#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         aws-region: ${{ secrets.AWS_REGION }}
+    - name: 'Task 1: Connect to AWS '
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
         
-#     - name: 'Task 2: Upload  to S3 bucket'
-#       run: aws s3 cp /home/runner/work/vuejs-sonar/vuejs-sonar/dist s3://githubaction-vuejs --recursive
+    - name: 'Task 2: Upload  to S3 bucket'
+      run: aws s3 cp /home/runner/work/Angular_Js-magic/Angular_Js-magic/dist s3://github-angular --recursive
